adding login page

--- a/app/globals.css
+++ b/app/globals.css
@@ -132,7 +132,6 @@
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
-
   }
 
   .dark {
@@ -144,15 +143,11 @@
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
-
-
   }
 }
 @theme {
   --breakpoint-xs: 27.25rem;
 }
-
-
 
 .alert {
   display: flex;
@@ -210,19 +205,19 @@
 }
 
 .alert-icon[data-alert-icon-type="warning"] {
-  color: #e69819
+  color: #e69819;
 }
 
 .alert-icon[data-alert-icon-type="error"] {
-  color: #d80d0d
+  color: #d80d0d;
 }
 
 .alert-icon[data-alert-icon-type="info"] {
-  color: #507aff
+  color: #507aff;
 }
 
 .alert-icon[data-alert-icon-type="success"] {
-  color: #0bc10b
+  color: #0bc10b;
 }
 
 .inline-content {
